--- a/sites/app/content/themes/ecjia-app/css/style.css
+++ b/sites/app/content/themes/ecjia-app/css/style.css
@@ -1,100 +1,739 @@
-body{margin:0;padding:0;background:#fff;color:#666}
-body{font:12px/1.5 'Microsoft Yahei',"微软雅黑",Verdana,SimHei,"Microsoft JhengHei",Tahoma}
-dd,dl,dt,form,h1,h2,h3,h4,h5,h6,img,li,p,span,ul{margin:0;padding:0;border:none;list-style-type:none;font-weight:400}
-a{color:#666;text-decoration:none}
+body {
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	color: #666
+}
 
-.ecjia-content{overflow:hidden;margin:0 auto;width:1200px}
-.ecjia-fl{float:left}
-.ecjia-fr{float:right}
-.clear{clear:both}
-.wt-10{margin-top:10px}
-.wt-80{margin-top:80px}
-.wt-50{margin-top:50px}
-.wt-20{margin-top:20px}
-.wt-30{margin-top:30px}
-.wt-135{margin-top:135px}
-.ml-20{margin-left:20px}
-.mr-10{margin-right:10px}
-.mr-20{margin-right:20px}
-.m-t-50{margin-top:-50px}
-.ecjia-fl+.ecjia-fl{width:50%}
-.fsize-24{font-size:24px}
-.fsize-36{font-size:36px}
-.fsize-48{font-size:48px}
+body {
+	font: 12px/1.5 'Microsoft Yahei',"微软雅黑",Verdana,SimHei,"Microsoft JhengHei",Tahoma
+}
 
-.arrow-left{display:inline-block;width:0;height:0;border-top:8px solid transparent;border-right:28px solid #fff;border-bottom:5px solid transparent;vertical-align:super}
-.ecjia-btn{padding: 10px 35px 10px 60px;border-radius:20px;background:#fff;color:#333;font-size:18px;position:relative;}
-.ecjia-btn .icon{display:inline-block;margin-right:5px;width:20px;height:20px;background-image:url(../images/icons.png);background-repeat:no-repeat;position:absolute;top: 11px;left: 35px;}
-.ecjia-btn .icon.iphone{background-position:0 0;}
-.ecjia-btn .icon.android{background-position:-20px 0}
-.two-btn .ecjia-btn:last-child{margin-left:30px}
-.blue.ecjia-btn{background:#42b8f1;color:#fff}
-.blue.ecjia-btn .icon.iphone{background-position:-40px 0}
-.blue.ecjia-btn .icon.android{background-position:-60px 0}
-.green.ecjia-btn{background:#47aa4d;color:#fff}
-.green.ecjia-btn .icon.iphone{background-position:-40px 1px}
-.green.ecjia-btn .icon.android{background-position:-60px 1px}
-.hover-font a:hover{background-color:#fff;color:#47aa4d}
-.blue.ecjia-btn:hover{background-color:#56c8ff}
-.green.ecjia-btn:hover{background-color:#58c55c}
-.ecjia-truncate{display:block;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.ecjia-truncate2{display:-webkit-box;overflow:hidden;-webkit-line-clamp:2;-webkit-box-orient:vertical}
+dd,dl,dt,form,h1,h2,h3,h4,h5,h6,img,li,p,span,ul {
+	margin: 0;
+	padding: 0;
+	border: none;
+	list-style-type: none;
+	font-weight: 400
+}
 
-.ecjia-header{height:80px;background:#fff}
-.ecjia-header.fixed.navbar-transparent{-webkit-box-shadow:0 3px 6px rgba(0,0,0,.12);box-shadow:0 3px 6px rgba(0,0,0,.12)}
-.ecjia-header .ecjia-logo{width:50%}
-.ecjia-header .ecjia-logo img{height:60px}
-.ecjia-header .nav{overflow:hidden}
-.ecjia-header .nav li{float:left;padding:0 17px;color:#333;font-size:17px;line-height:80px}
-.ecjia-header .nav li a{display:inline;padding:5px}
-.ecjia-header .nav li:last-child{padding-right:0}
-.ecjia-header.fixed{position:fixed;top:0;right:0;left:0;z-index:9999;height:80px}
-.ecjia-container{margin-top:80px}
-.ecjia-header .nav li a.ecjia-back-green{padding:5px 15px;border-radius:40px;background-color:#47aa4d;color:#fff;text-align:center;font-size:17px;line-height:30px;cursor:pointer}
-.ecjia-header .nav li.active a {border-bottom: 4px solid #47aa4d;color: #47aa4d}
+a {
+	color: #666;
+	text-decoration: none
+}
 
-.ecjia-container{width:100%;height:510px;min-width:1200px;background-color:#47aa4d}
-.wt-phone{margin-top:60px}
-.project-view{position:relative;margin-top:0;margin-left:85px;width:449px;height:757px;background:url(../images/phone.png) no-repeat;background-size:100%}
-.project-view iframe{padding:70px 64px;width:324px;height:567px}
-.project-view .phone-tips{position:absolute;top:200px;right:0;padding:0 0 30px;width:15px;background:url(../images/mouse.png) no-repeat bottom;background-size:100%;color:#fff;text-align:center;writing-mode:lr-tb}
-.ecjia-desc{width:100%;color:#fff;text-align:right}
-.ecjia-desc .ecjia-text-name{margin-right:-15px}
-.ecjia-desc .ecjia-edition{padding:3px 10px;border-radius:5px;background-color:#fff;color:#47aa4d;vertical-align:text-bottom;font-size:20px;line-height:31px}
-.ecjia-desc .edition-icon{position:relative;top:-1px;right:-15px}
-.ecjia-desc h2{line-height:70px}
-.ecjia-code{color:#333;font-size:14px}
-.ecjia-code span{display:inline-block;text-align:center}
-.ecjia-code span,.ecjia-code span img{width:200px;height:200px}
+.ecjia-content {
+	overflow: hidden;
+	margin: 0 auto;
+	width: 1200px
+}
 
-.video{text-align:center}
-.ecjia-title{color:#333;text-align:center}
-.ecjia-title p{margin:30px auto 40px;width:785px;color:#888;font-size:16px}
-.cly-title{color:#47aa4d;text-align:center;font-size:16px}
+.ecjia-fl {
+	float: left
+}
 
-.swiper-container-phone{position:static;overflow:hidden;margin:70px 0 0 64px;width:320px}
-.swiper-container-phone .swiper-pagination{position:relative;bottom:36px;z-index:2;height:20px}
-.swiper-pagination-bullet{width:10px;height:10px}
-.clyimges{position:relative}
-.swiper-button-prev{left:90px}
-.swiper-button-next{right:90px}
-.swiper-container{position:static;width:900px}
-.swiper-container img{width:100%}
-.swiper-slide p{margin-top:25px;color:#000;text-align:center;font-size:16px}
+.ecjia-fr {
+	float: right
+}
 
-.download{margin-bottom:50px;text-align:center}
+.clear {
+	clear: both
+}
 
-.page-footer{padding:15px 0;background-color:#2c313a;text-align:center;font-size:14px;line-height:25px}
-.page-footer p:first-child{color:#333}
-.page-footer p:last-child{color:#888}
-.page-footer .outlink a{display:inline-block;width:132px;height:30px;cursor:pointer}
-.page-footer .outlink .blog-ico{margin-right:35px;background:url(../images/blog.png)}
-.page-footer .outlink .blog-ico:hover{background:url(../images/blog_hover.png)}
-.page-footer .outlink .wechat{background:url(../images/wechat.png)}
-.outlink-qrcode{position:relative;display:inline-block}
-.outlink-qrcode .wechat-code{position:absolute;top:-197px;z-index:99;display:none;padding:10px 5px;width:130px;border-radius:5px 5px 0 0;background:#f8f8f8}
-.outlink-qrcode .wechat-code img{width:130px;height:130px}
-.page-footer .outlink .wechat:hover{background:url(../images/wechat_hover.png)}
-.outlink .outlink-qrcode:hover .wechat-code{display:block}
-.footer-links p{text-align:center}
-.footer-links p a{margin-right:20px}
+.wt-10 {
+	margin-top: 10px
+}
+
+.wt-80 {
+	margin-top: 80px
+}
+
+.wt-50 {
+	margin-top: 50px
+}
+
+.wt-20 {
+	margin-top: 20px
+}
+
+.wt-30 {
+	margin-top: 30px
+}
+
+.wt-50 {
+	margin-top: 50px
+}
+
+.wt-135 {
+	margin-top: 135px
+}
+
+.ml-20 {
+	margin-left: 20px
+}
+
+.mr-10 {
+	margin-right: 10px
+}
+
+.mr-20 {
+	margin-right: 20px
+}
+
+.m-t-50 {
+	margin-top: -50px
+}
+
+.ecjia-fl+.ecjia-fl {
+	width: 50%
+}
+
+.fsize-24 {
+	font-size: 24px
+}
+
+.fsize-36 {
+	font-size: 36px
+}
+
+.fsize-48 {
+	font-size: 48px
+}
+
+.arrow-left {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border-top: 8px solid transparent;
+	border-right: 28px solid #fff;
+	border-bottom: 5px solid transparent;
+	vertical-align: super
+}
+
+.ecjia-btn {
+	padding: 10px 15px 10px 35px;
+	border-radius: 8px;
+	background: #fff;
+	color: #333;
+	font-size: 18px;
+	position: relative;
+}
+
+.ecjia-btn+.ecjia-btn {
+	margin-left: 30px
+}
+
+.ecjia-btn .icon {
+	display: inline-block;
+	margin-right: 5px;
+	width: 20px;
+	height: 20px;
+	background-image: url(../images/icons.png);
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 11px;
+	left: 10px;
+}
+
+.ecjia-btn .icon.iphone {
+	background-position: 0 0;
+}
+
+.ecjia-btn .icon.android {
+	background-position: -20px 0
+}
+
+.two-btn .ecjia-btn:last-child {
+	margin-left: 30px
+}
+
+.blue.ecjia-btn {
+	background: #3999FD;
+	color: #fff;
+}
+
+.green.ecjia-btn {
+	background-color: #00D04E;
+	color: #fff;
+}
+
+.blue.ecjia-btn .icon.iphone {
+	background-position: -40px 0
+}
+
+.blue.ecjia-btn .icon.android {
+	background-position: -60px 0
+}
+
+.green.ecjia-btn {
+	background: #47aa4d;
+	color: #fff
+}
+
+.green.ecjia-btn .icon.iphone {
+	background-position: -40px 0
+}
+
+.green.ecjia-btn .icon.android {
+	background-position: -60px 0
+}
+
+.hover-font a:hover {
+	background-color: #fff;
+	color: #47aa4d
+}
+
+.blue.ecjia-btn:hover {
+	background-color: #56c8ff
+}
+
+.green.ecjia-btn:hover {
+	background-color: #58c55c
+}
+
+.ecjia-truncate {
+	display: block;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap
+}
+
+.ecjia-truncate2 {
+	display: -webkit-box;
+	overflow: hidden;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical
+}
+
+.ecjia-header {
+	height: 80px;
+	background: #fff
+}
+
+.ecjia-header.fixed.navbar-transparent {
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,.12);
+	box-shadow: 0 3px 6px rgba(0,0,0,.12)
+}
+
+.ecjia-header .ecjia-logo {
+	width: 50%
+}
+
+.ecjia-header .ecjia-logo img {
+	height: 60px
+}
+
+.ecjia-header .nav {
+	overflow: hidden
+}
+
+.ecjia-header .nav li {
+	float: left;
+	padding: 0 17px;
+	color: #333;
+	font-size: 17px;
+	line-height: 80px
+}
+
+.ecjia-header .nav li a {
+	display: inline;
+	padding: 5px
+}
+
+.ecjia-header .nav li:last-child {
+	padding-right: 0
+}
+
+.ecjia-header.fixed {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 9999;
+	height: 80px
+}
+
+.ecjia-container {
+	margin-top: 80px
+}
+
+.ecjia-header .nav li a.ecjia-back-green {
+	padding: 5px 15px;
+	border-radius: 40px;
+	background-color: #47aa4d;
+	color: #fff;
+	text-align: center;
+	font-size: 17px;
+	line-height: 30px;
+	cursor: pointer
+}
+
+.ecjia-header .nav li.active a {
+	border-bottom: 4px solid #47aa4d;
+	color: #47aa4d
+}
+
+.ecjia-container {
+	width: 100%;
+	height: 660px;
+	min-width: 1200px;
+	background: url(../images/background.png) 0 0 no-repeat
+}
+
+.wt-introduce {
+	margin-top: 100px;
+	margin-left: 40px;
+}
+
+.wt-introduce .title {
+	font-size: 48px;
+	color: #fff;
+	font-weight: bold;
+	line-height: 70px;
+}
+
+.wt-introduce .title-notice {
+	font-size: 22px;
+	color: #fff;
+	line-height: 60px;
+	margin-bottom: 30px;
+}
+
+.wt-introduce .qrcode-item {
+	float: left;
+	text-align: center;
+}
+
+.wt-introduce .qrcode-item .img {
+	padding: 5px;
+	background-color: #fff;
+	border-radius: 8px;
+}
+
+.wt-introduce .qrcode-item.last {
+	margin-left: 70px;
+}
+
+.wt-introduce .qrcode-item p {
+	line-height: 50px;
+	font-size: 18px;
+	color: #fff;
+}
+
+.content-item {
+	height: 580px;
+	margin-top: 40px;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+.content-item .title {
+	height: 32px;
+	line-height: 32px;
+	margin-top: 50px;
+	font-size: 22px;
+}
+
+.content-item .left-side {
+	width: 500px;
+}
+
+.content-item .right-side {
+	width: 440px;
+	padding: 0 30px;
+}
+
+.content-item .right-side.p_r0 {
+	padding-right: 0;
+}
+
+.content-item .left-side img, .content-item .right-side img {
+	width: 400px;
+}
+
+.content-item .title .num {
+	border-radius: 50%;
+	background-color: #43BC60;
+	display: block;
+	width: 32px;
+	height: 32px;
+	text-align: center;
+	line-height: 32px;
+	color: #fff;
+	box-shadow: 0 3px 6px rgba(0,0,0,.12);
+	float: left;
+	margin-right: 15px;
+	font-size: 15px;
+}
+
+.content-item .notice {
+	width: 88%;
+	font-size: 16px;
+	margin-top: 15px;
+	color: #838383;
+	margin-bottom: 80px;
+}
+
+.content-item .notice.w91 {
+	width: 91%;
+}
+
+.teach-item-content {
+	width: 500px;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.teach-item-content .title {
+	font-size: 36px;
+	margin-bottom: 30px;
+	color: #333;
+}
+
+.teach-item-content .content {
+    position: relative;
+    height: 580px;
+}
+
+.teach-item-content .content .background {
+	width: 400px;
+}
+
+.teach-item-content .content .inner {
+	position: absolute;
+	top: 150px;
+	left: 126px;
+	width: 250px;
+	height: 250px;
+}
+
+.teach-item-content .content .bottom {
+    position: absolute;
+    bottom: 0;
+    left: 217px;
+}
+
+.teach-item-content .content p {
+	position: absolute;
+	top: 442px;
+	left: 196px;
+	font-size: 18px;
+	color: red;
+}
+
+.step-item {
+    margin: 40px 0;
+    width: 100%;
+    height: 140px;
+}
+
+.step-item-content {
+    width: 970px;
+    margin: 0 auto;
+    height: 140px;
+}
+
+.step-item-content .step-item-li {
+    width: 270px;
+    background-color: #FCFCFC;
+    border-radius: 8px;
+    float: left;
+    margin-right: 50px;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    padding-bottom: 0;
+	height: 134px;
+	display: -webkit-box;
+	align-items:center;
+-webkit-align-items:center;
+box-align:center;
+-moz-box-align:center;
+-webkit-box-align:center;
+}
+
+.step-item-content .step-item-li:last-child {
+    margin-right: 0;
+}
+
+.step-item-content .step-item-li .img img {
+    width: 90px;
+    height: 110px;
+}
+
+.step-item-content .step-item-li:first-child .img img {
+    width: 50px;
+    height: 50px;
+}
+
+.right {
+    padding-left: 20px;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    color: #838383;
+}
+
+.right .step {
+    font-size: 25px;
+	color: #333;
+	padding-bottom: 10px;
+}
+
+.wt-phone {
+	margin-top: 60px
+}
+
+.project-view {
+	position: relative;
+	margin-top: 0;
+	width: 449px;
+	height: 757px;
+	background: url(../images/phone.png) no-repeat;
+	background-size: 100%
+}
+
+.project-view iframe {
+	padding: 70px 64px;
+	width: 324px;
+	height: 567px
+}
+
+.project-view .phone-tips {
+	position: absolute;
+	top: 200px;
+	right: 0;
+	padding: 0 0 30px;
+	width: 15px;
+	background: url(../images/mouse.png) no-repeat bottom;
+	background-size: 100%;
+	color: #fff;
+	text-align: center;
+	writing-mode: lr-tb
+}
+
+.ecjia-desc {
+	width: 100%;
+	color: #fff;
+	text-align: right
+}
+
+.ecjia-desc .ecjia-text-name {
+	margin-right: -15px
+}
+
+.ecjia-desc .ecjia-edition {
+	padding: 3px 10px;
+	border-radius: 5px;
+	background-color: #fff;
+	color: #47aa4d;
+	vertical-align: text-bottom;
+	font-size: 20px;
+	line-height: 31px
+}
+
+.ecjia-desc .edition-icon {
+	position: relative;
+	top: -1px;
+	right: -15px
+}
+
+.ecjia-desc h2 {
+	line-height: 70px
+}
+
+.ecjia-code {
+	color: #333;
+	font-size: 14px
+}
+
+.ecjia-code span {
+	display: inline-block;
+	text-align: center
+}
+
+.ecjia-code span,.ecjia-code span img {
+	width: 200px;
+	height: 200px
+}
+
+.video {
+	text-align: center
+}
+
+.ecjia-title {
+	color: #333;
+	text-align: center;
+	margin-top: 80px;
+}
+
+.ecjia-title p {
+	margin: 10px auto 10px;
+	width: 785px;
+	color: #888;
+	font-size: 16px
+}
+
+.ecjia-title .top-title {
+	margin-top: 30px;
+}
+
+.ecjia-title .bottom-title {
+	margin-bottom: 30px;
+}
+
+.cly-title {
+	text-align: center;
+	font-size: 36px;
+	color: #333;
+	margin-top: 80px;
+}
+
+.cly-tab-content {
+    width: 900px;
+    margin: 0 auto;
+    height: 70px;
+    line-height: 70px;
+    font-size: 25px;
+}
+
+.cly-tab-content .tab-li {
+    display: inline-block;
+    width: 240px;
+    text-align: center;
+    margin-left: 140px;
+}
+
+.cly-tab-content .tab-li.active {
+    border-bottom: 2px solid #00D04E;
+}
+
+#distributor-swiper {
+    display: none;
+}
+
+.swiper-container-phone {
+	position: static;
+	overflow: hidden;
+	margin: 70px 0 0 64px;
+	width: 320px
+}
+
+.swiper-container-phone .swiper-pagination {
+	position: relative;
+	bottom: 36px;
+	z-index: 2;
+	height: 20px
+}
+
+.swiper-pagination-bullet {
+	width: 10px;
+	height: 10px
+}
+
+.clyimges {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.swiper-button-prev {
+	left: 90px
+}
+
+.swiper-button-next {
+	right: 90px
+}
+
+.swiper-container {
+	position: static;
+	width: 900px
+}
+
+.swiper-container img {
+	width: 100%
+}
+
+.swiper-slide p {
+	margin-top: 25px;
+	color: #000;
+	text-align: center;
+	font-size: 16px
+}
+
+.download {
+	margin-bottom: 50px;
+	text-align: center
+}
+
+.page-footer {
+	padding: 15px 0;
+	background-color: #2c313a;
+	text-align: center;
+	font-size: 14px;
+	line-height: 25px
+}
+
+.page-footer p:first-child {
+	color: #333
+}
+
+.page-footer p:last-child {
+	color: #888
+}
+
+.page-footer .outlink a {
+	display: inline-block;
+	width: 132px;
+	height: 30px;
+	cursor: pointer
+}
+
+.page-footer .outlink .blog-ico {
+	margin-right: 35px;
+	background: url(../images/blog.png)
+}
+
+.page-footer .outlink .blog-ico:hover {
+	background: url(../images/blog_hover.png)
+}
+
+.page-footer .outlink .wechat {
+	background: url(../images/wechat.png)
+}
+
+.outlink-qrcode {
+	position: relative;
+	display: inline-block
+}
+
+.outlink-qrcode .wechat-code {
+	position: absolute;
+	top: -197px;
+	z-index: 99;
+	display: none;
+	padding: 10px 5px;
+	width: 130px;
+	border-radius: 5px 5px 0 0;
+	background: #f8f8f8
+}
+
+.outlink-qrcode .wechat-code img {
+	width: 130px;
+	height: 130px
+}
+
+.page-footer .outlink .wechat:hover {
+	background: url(../images/wechat_hover.png)
+}
+
+.outlink .outlink-qrcode:hover .wechat-code {
+	display: block
+}
+
+.footer-links p {
+	text-align: center
+}
+
+.footer-links p a {
+	margin-right: 20px
+}
