--- a/content/apps/market/statics/css/activity.css
+++ b/content/apps/market/statics/css/activity.css
@@ -1,45 +1,50 @@
 .market_activity input[type="text"] {
-	margin-bottom : 0px;
+	margin-bottom: 0px;
 }
 
 /*活动列表*/
-.outline{
-    background-color: #efefef;
-    border-radius: 5px;
-    color: #000000;
-	width:30%;
+.outline {
+	background-color: #efefef;
+	border-radius: 5px;
+	color: #000000;
+	width: 30%;
 	margin-bottom: 10px;
 	margin-right: 10px;
 	display: inline-block;
 	vertical-align: top;
 }
-.outline-right{
-    margin-top: 6px;
+
+.outline-right {
+	margin-top: 6px;
 }
 
-.outline a{
-	color:#000000;
-	text-decoration:none;
+.outline a {
+	color: #000000;
+	text-decoration: none;
 }
+
 .outline a:hover {
-    color:#08c;
-	text-decoration:none;
+	color: #08c;
+	text-decoration: none;
 }
 
 /*活动详情*/
-.detail{
+.detail {
 	background-color: #EEEEEE;
-    height: 150px;
-    margin: 9px 30px 0px;
+	height: 150px;
+	margin: 9px 30px 0px;
 }
-.func-detail-margin{
+
+.func-detail-margin {
 	padding: 0px 30px 9px;
 	height: 100px;
 }
-.title-size{
-	font-size:17px;
+
+.title-size {
+	font-size: 17px;
 }
-.fonticon-img-wrap{
+
+.fonticon-img-wrap {
 	float: left;
 	width: 60px;
 	height: 60px;
@@ -48,44 +53,162 @@
 	border-radius: 0.1875rem;
 	margin-right: 1rem;
 }
-.activity-icon{
+
+.activity-icon {
 	width: 60px;
 	height: 60px;
 }
-.activity-open-btn{
-	width:70px;
-	margin-top:5px;
+
+.activity-open-btn {
+	width: 70px;
+	margin-top: 5px;
 }
-.literal-wrap{
+
+.literal-wrap {
 	padding-top: 10px;
 }
-.desc{
+
+.desc {
 	color: #8d8d8d;
 	overflow: hidden;
 	margin-top: 5px;
 }
-.title{
+
+.title {
 	font-weight: 400;
 	font-style: normal;
 	padding-top: 5px;
 }
-.intrduction{
+
+.intrduction {
 	padding: 10px 30px;
 	color: #8d8d8d;
 }
-.time-margin{
-	margin-left:50px;
-}
-.span-font{
-	font-weight: bold;
-	margin-left:5px;
-	margin-right:5px;
+
+.time-margin {
+	margin-left: 50px;
 }
 
-.cannotedit-info{
+.span-font {
+	font-weight: bold;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.cannotedit-info {
 	background-color: #EEEEEE;
-	padding-top:10px;
-	margin-bottom:5px;
+	padding-top: 10px;
+	margin-bottom: 5px;
 	border-radius: 10px;
 }
 
+/*活动奖品池*/
+.wookmark .thumbnail {
+    width: 30.666666%;
+}
+
+.wookmark.warehouse .more {
+    height: 155px;
+}
+
+.wookmark .bd_new {
+    line-height: none;
+}
+
+.wookmark.media_captcha .thumbnail .input {
+    opacity: 1;
+}
+
+.wookmark.warehouse .thumbnail .input {
+    opacity: 1;
+    cursor: auto;
+}
+
+.wookmark .thumbnail {
+    margin-right: 4%;
+    border-radius: 15px;
+}
+
+.wookmark.warehouse .more i {
+    top: 25%;
+}
+
+.wookmark .thumbnail:nth-child(4n) {
+    margin-right: 4%;
+}
+
+.wookmark ul.wookmark-ul {
+    display: block;
+    overflow: hidden;
+    padding: 0;
+    -webkit-padding-start: 0;
+}
+
+.wookmark .thumbnail:nth-child(3n) {
+    margin-right: 0;
+}
+
+.prize_level_div {
+    height: 155px;
+}
+
+.prize_level {
+    background-color: #91cde4;
+    font-size: 16px;
+    text-align: left;
+}
+
+.prize_level .model-title {
+    padding-left: 20px;
+    height: 70px;
+    padding-top: 20px;
+}
+
+.prize_level .model-title span {
+    color: #fff;
+}
+
+.prize_level.prize_level_0 {
+    background-color: #e14355;
+}
+
+.prize_level.prize_level_1 {
+    background-color: #f6b751;
+}
+
+.prize_level.prize_level_2 {
+    background-color: #2fade3;
+}
+
+.prize_level.prize_level_3 {
+    background-color: #3ab391;
+}
+
+.prize_level .model-inner {
+    background-color: rgba(4, 0, 0, 0.1);
+    font-size: 14px;
+    color: #fff;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 15px;
+}
+
+.prize_level .input {
+    background-color: #efefef;
+}
+
+.wookmark-ul .p_l20 {
+	padding-left: 20px;
+}
+
+i.fontello-icon-trash {
+	color: #c62626;
+}
+
+.wookmark-ul .prize-used {
+	float: right;
+	color: #373a3c;
+    padding-right: 20px;
+	font-weight: 500;
+    font-size: 1rem;
+}
