--- a/content/plugins/mp_ggk/css/activity-style.css
+++ b/content/plugins/mp_ggk/css/activity-style.css
@@ -1,20 +1,77 @@
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td {
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
 	margin: 0;
-	padding: 0;color: #444444;
+	padding: 0;
+	color: #444444;
 	font: 14px/1.5 Microsoft YaHei, Helvitica, Verdana, Arial, san-serif;
-	
 }
-#guagua{
-margin: 0 auto;
-width:320px;
+
+.main {
+	max-width: 640px;
+	margin: 0 auto;
+	padding-top: 15px;
 }
-.activity-lottery-winning{ background: url(../images/activity-lottery-bg2.jpg) #2a8a00;overflow-x: hidden;}
-.activity-lottery-end{ background: url(../images/activity-lottery-bg2.jpg) #2a8a00;overflow-x: hidden;}
-.activity-coupon-winning{ background-color:#8d0001;overflow-x: hidden;}
-.activity-coupon-end{ background-color:#8d0001;overflow-x: hidden;}
-.activity-scratch-card-winning{background: #672600;overflow-x: hidden;}
-.activity-scratch-card-end{background: #672600;overflow-x: hidden;}
-.activity-lottery-winning .main{
+
+#guagua {
+	margin: 0 auto;
+	width: 320px;
+}
+
+.activity-lottery-winning {
+	background: url(../images/activity-lottery-bg2.jpg) #2a8a00;
+	overflow-x: hidden;
+}
+
+.activity-lottery-end {
+	background: url(../images/activity-lottery-bg2.jpg) #2a8a00;
+	overflow-x: hidden;
+}
+
+.activity-coupon-winning {
+	background-color: #8d0001;
+	overflow-x: hidden;
+}
+
+.activity-coupon-end {
+	background-color: #8d0001;
+	overflow-x: hidden;
+}
+
+.activity-scratch-card-winning {
+	background: #672600;
+	overflow-x: hidden;
+	position: relative;
+}
+
+.activity-scratch-card-end {
+	background: #672600;
+	overflow-x: hidden;
+}
+
+.activity-lottery-winning .main {
 	background: url(../images/activity-lottery-bg.png) no-repeat top center;
 	background-size: 320px auto;
 }
@@ -23,81 +80,102 @@ width:320px;
 	position: relative;
 	width: 100%;
 	top: 20px;
-	margin-bottom: 30px;/* -moz-transform: rotate(-5deg);
+	margin-bottom: 30px;
+	/* -moz-transform: rotate(-5deg);
 	-webkit-transform: rotate(-5deg);
 	-o-transform: rotate(-5deg);
 	-ms-transform: rotate(-5deg);
 	transform: rotate(-5deg); */
 }
+
 #inner-cont {
 	position: absolute;
 	width: 100%;
-	top: 70px;/* -moz-transform: rotate(-5deg);
+	top: 70px;
+	/* -moz-transform: rotate(-5deg);
 	-webkit-transform: rotate(-5deg);
 	-o-transform: rotate(-5deg);
 	-ms-transform: rotate(-5deg);
 	transform: rotate(-5deg); */
 }
+
 #outer {
 	height: 227px;
-    margin: 0 auto;
-    max-width: 227px;
-    width: 227px;
+	margin: 0 auto;
+	max-width: 227px;
+	width: 227px;
 }
+
 #inner {
 	cursor: pointer;
-    height: 110px;
-    margin: 0 auto;
-    max-width: 90px;
-    width: 90px;
+	height: 110px;
+	margin: 0 auto;
+	max-width: 90px;
+	width: 90px;
 }
-#outer img, #inner img {
+
+#outer img,
+#inner img {
 	display: block;
 	margin: 0 auto;
 }
-.cover{
-	width: 320px;
-	max-width: 480px;
-	margin: 0 auto;
+
+.cover {
 	position: relative;
+	text-align: center;
+	background-color: #FFFDF3;
+	margin: 15px;
+	margin-top: 0;
+	border-radius: 5px;
 }
-.cover img{
+
+.cover img {
 	width: 320px;
 }
-#scratchpad,#prize{
-	position: absolute;
-	width: 150px;
-	height: 40px;
-	top: 170px;
-	left: 80px;
-	text-align: center;
-	font-size: 20px;
-	line-height: 40px;
-	color:#333;
+
+.cover-content {
+	position: relative;
+    width: 320px;
+    margin: 0 auto;
+	height: 250px;
 }
-.btn-cont{
+
+#scratchpad,
+#prize {
+	position: absolute;
+    width: 220px;
+    height: 60px;
+    top: 175px;
+    left: 50px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 40px;
+    color: #333;
+}
+
+.btn-cont {
 	position: absolute;
 	bottom: 3px;
 	right: 3px;
 	display: none;
 }
+
 .content {
-	width: 320px;
-	max-width: 480px;
 	margin: 0 auto;
 	position: relative;
+}
 
-}
 .banner {
-	text-align:center;
+	text-align: center;
 }
+
 .main img {
-	margin-top:20px;
-	max-width: 100%;
+	margin-top: 20px;
 	border: 0 none;
 }
+
 .boxcontent {
-	margin:15px 15px 0;
+	margin: 15px 15px 0;
 	border-radius: 5px;
 	padding: 6px;
 	background-color: #FFEDC5;
@@ -106,67 +184,78 @@ width:320px;
 	-o-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
-.boxyellow{
+
+.boxyellow {
 	background-color: #FFEDC5;
 }
-.boxwhite{
+
+.boxwhite {
 	background-color: #FFEDC5;
 }
+
 .box {
 	border-radius: 5px;
-	font-size:14px;
+	font-size: 14px;
 }
+
 .box .title-red {
 	padding: 0 5px 0px 10px;
-	background:url(../images/title-bg-red.png) no-repeat 0 0;
+	background: url(../images/title-bg-red.png) no-repeat 0 0;
 	border-radius: 3px 3px 3px 0;
-	color:#ffffff;
-	height:22px;
-	margin:-1px;
+	color: #ffffff;
+	height: 22px;
+	margin: -1px;
 	/*-moz-text-shadow:0 1px 0 #8d0001;-webkit-text-shadow:0 1px 0 #8d0001;text-shadow:0 1px 0 #8d0001;
 	text-shadow:0px 1px 0 #8d0001;*/
 }
+
 .box .title-orange {
 	padding: 0 5px 0px 10px;
-	background:url(../images/title-bg-orange.png) no-repeat 0 0;
+	background: url(../images/title-bg-orange.png) no-repeat 0 0;
 	border-radius: 3px 3px 3px 0;
-	color:#ffffff;
-	height:22px;
-	margin:-1px;
+	color: #ffffff;
+	height: 22px;
+	margin: -1px;
 	/*-moz-text-shadow:0 1px 0 #8d0001;-webkit-text-shadow:0 1px 0 #8d0001;text-shadow:0 1px 0 #8d0001;
 	text-shadow:0px 1px 0 #8d0001;*/
 }
+
 .box .title-green {
 	padding: 0 5px 0px 10px;
-	background:url(../images/title-bg-green.png) no-repeat 0 0;
+	background: url(../images/title-bg-green.png) no-repeat 0 0;
 	border-radius: 3px 3px 3px 0;
-	color:#ffffff;
-	height:22px;
-	margin:-1px;
+	color: #ffffff;
+	height: 22px;
+	margin: -1px;
 	/*-moz-text-shadow:0 1px 0 #8d0001;-webkit-text-shadow:0 1px 0 #8d0001;text-shadow:0 1px 0 #8d0001;
 	text-shadow:0px 1px 0 #8d0001;*/
 }
+
 .box .title-brown {
 	padding: 0 5px 0px 10px;
-	background:url(../images/title-bg-brown.png) no-repeat 0 0;
+	background: url(../images/title-bg-brown.png) no-repeat 0 0;
 	border-radius: 3px 3px 3px 0;
-	color:#ffffff;
-	height:22px;
-	margin:-1px;
+	color: #ffffff;
+	height: 22px;
+	margin: -1px;
 	/*-moz-text-shadow:0 1px 0 #8d0001;-webkit-text-shadow:0 1px 0 #8d0001;text-shadow:0 1px 0 #8d0001;
 	text-shadow:0px 1px 0 #8d0001;*/
 }
+
 .box .Detail {
 	padding: 15px;
 }
+
 .Detail img {
 	height: auto;
 	max-width: 100%;
 	border: 0 none;
 }
+
 .red {
-	color:red
+	color: red
 }
+
 .px {
 	margin: 0.5em 0;
 	position: relative;
@@ -177,41 +266,50 @@ width:320px;
 	color: #333333;
 	text-shadow: 0 1px 0 #FFFFFF;
 	display: block;
-	width: 100%; 
-	padding:6px 10px;
+	width: 100%;
+	padding: 6px 10px;
 	font-size: 18px;
-	margin:10px 0 0 0;
-	font-family:Arial, Helvetica, sans-serif;
-	-webkit-appearance:none;
+	margin: 10px 0 0 0;
+	font-family: Arial, Helvetica, sans-serif;
+	-webkit-appearance: none;
 }
+
 .px:hover {
 	border: 1px solid #ff6501;
 }
+
 .px:focus {
 	border: 1px solid #ff6501;
 	box-shadow: 0 0 5px #ff6501;
 }
+
 .px[type="text"] {
-     width: 100%; 
-     box-sizing: border-box;
-     -webkit-box-sizing:border-box;
-     -moz-box-sizing: border-box;
+	width: 100%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
+
 .px[type="password"] {
-     width: 100%; 
-     box-sizing: border-box;
-     -webkit-box-sizing:border-box;
-     -moz-box-sizing: border-box;
+	width: 100%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
+
 .pxbtn {
-	
 	background: #ff6501;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #ffa201 ), to( #ff6501 )); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #ffa201 , #ff6501 ); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #ffa201 , #ff6501 ); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #ffa201 , #ff6501 ); /* IE10 */
-	background-image:      -o-linear-gradient( #ffa201 , #ff6501 ); /* Opera 11.10+ */
-	background-image:         linear-gradient( #ffa201 , #ff6501 );
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #ffa201), to( #ff6501));
+	/* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #ffa201, #ff6501);
+	/* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient( #ffa201, #ff6501);
+	/* FF3.6 */
+	background-image: -ms-linear-gradient( #ffa201, #ff6501);
+	/* IE10 */
+	background-image: -o-linear-gradient( #ffa201, #ff6501);
+	/* Opera 11.10+ */
+	background-image: linear-gradient( #ffa201, #ff6501);
 	border: 1px solid #ff6501;
 	border-bottom: 1px solid #d35605;
 	color: #ffffff;
@@ -228,34 +326,63 @@ width:320px;
 	font-weight: bold;
 	text-shadow: 0 0 2px #BE4205;
 	font-size: 18px;
-	padding:10px;
-	margin:10px 0 0 0;
+	padding: 10px;
+	margin: 10px 0 0 0;
 }
+
 .pxbtn:visited {
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #ffa201 ), to( #ff6501 )); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #ffa201 , #ff6501 ); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #ffa201 , #ff6501 ); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #ffa201 , #ff6501 ); /* IE10 */
-	background-image:      -o-linear-gradient( #ffa201 , #ff6501 ); /* Opera 11.10+ */
-	background-image:         linear-gradient( #ffa201 , #ff6501 );
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #ffa201), to( #ff6501));
+	/* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #ffa201, #ff6501);
+	/* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient( #ffa201, #ff6501);
+	/* FF3.6 */
+	background-image: -ms-linear-gradient( #ffa201, #ff6501);
+	/* IE10 */
+	background-image: -o-linear-gradient( #ffa201, #ff6501);
+	/* Opera 11.10+ */
+	background-image: linear-gradient( #ffa201, #ff6501);
 }
+
 .pxbtn:hover {
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #ff7f01 ), to( #ff6501 )); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #ff7f01 , #ff6501 ); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #ff7f01 , #ff6501 ); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #ff7f01 , #ff6501 ); /* IE10 */
-	background-image:      -o-linear-gradient( #ff7f01 , #ff6501 ); /* Opera 11.10+ */
-	background-image:         linear-gradient( #ff7f01 , #ff6501 );
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #ff7f01), to( #ff6501));
+	/* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #ff7f01, #ff6501);
+	/* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient( #ff7f01, #ff6501);
+	/* FF3.6 */
+	background-image: -ms-linear-gradient( #ff7f01, #ff6501);
+	/* IE10 */
+	background-image: -o-linear-gradient( #ff7f01, #ff6501);
+	/* Opera 11.10+ */
+	background-image: linear-gradient( #ff7f01, #ff6501);
 }
+
 .pxbtn:active {
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #ff6501 ), to( #ffa201 )); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #ff6501 , #ffa201 ); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #ff6501 , #ffa201 ); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #ff6501 , #ffa201 ); /* IE10 */
-	background-image:      -o-linear-gradient( #ff6501 , #ffa201 ); /* Opera 11.10+ */
-	background-image:         linear-gradient( #ff6501 , #ffa201 );
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #ff6501), to( #ffa201));
+	/* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #ff6501, #ffa201);
+	/* Chrome 10+, Saf5.1+ */
+	background-image: -moz-linear-gradient( #ff6501, #ffa201);
+	/* FF3.6 */
+	background-image: -ms-linear-gradient( #ff6501, #ffa201);
+	/* IE10 */
+	background-image: -o-linear-gradient( #ff6501, #ffa201);
+	/* Opera 11.10+ */
+	background-image: linear-gradient( #ff6501, #ffa201);
 	border: 1px solid #ff6501;
 	border-top: 1px solid #d35605;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3) inset;
 }
-input::-moz-placeholder, textarea::-moz-placeholder { color: #999;}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+	color: #999;
+}
+
+.prize-btn {
+	margin: 0 auto;
+	text-align: center;
+	max-width: 640px;
+	padding-bottom: 20px;
+}
