更新platform应用模块

--- a/content/apps/platform/statics/platform/css/ecjia.function.css
+++ b/content/apps/platform/statics/platform/css/ecjia.function.css
@@ -170,10 +170,12 @@ select.w350{width:364px;}
 .padding5{padding:5px;}
 .padding8{padding:8px;}
 .padding10{padding:10px;}
+.padding15{padding:15px;}
 .padding20{padding:20px;}
 
 .p_t3{padding-top:3px;}
 .p_t5{padding-top:5px;}
+.p_t15{padding-top:15px;}
 .p_t20{padding-top:20px;}
 
 .p_l0{padding-left:0}
